--- a/common.html
+++ b/common.html
@@ -39,7 +39,7 @@
             <nav class="footer-menu">
                 <ul>
                     <li><a href="index.html">TOP</a></li>
-                    <li><a href="HowToJoin.html">入部方法</a></li>
+                    <!--<li><a href="HowToJoin.html">入部方法</a></li>-->
                     <li><a href="concept.html">コンセプト</a></li>
                     <li><a href="members.html">メンバー</a></li>
                     <li><a href="access.html">アクセス</a></li>
