--- a/members.html
+++ b/members.html
@@ -160,7 +160,7 @@
         <footer class="footer">
             <nav class="footer-menu">
                 <ul>
-                    <li><a href="HowToJoin.html">入部方法</a></li>
+                    <!--<li><a href="HowToJoin.html">入部方法</a></li>-->
                     <li><a href="concept.html">活動紹介</a></li>
                     <li><a href="members.html">メンバー</a></li>
                     <!--
