--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="header-site-menu">
                     <nav class="site-menu">
                         <ul>
-                            <!--<li><a href="HowToJoin.html">入部方法</a></li>-->
+                            <!--<li><a href="HowToJoin.html">入部方法1</a></li>-->
                             <li><a href="concept.html">活動紹介</a></li>
                             <li><a href="members.html">メンバー</a></li>
                             <!--
